fixing alignment issue for default, public, private

--- a/static/css/final.css
+++ b/static/css/final.css
@@ -1195,3 +1195,7 @@ a {
 .global#QubePlaylist .bottomContainer .volume .volumeBar {
   background-color: #36b0c8;
 }
+
+.globalSummary {
+  width: 60px;
+}
